patches/paste/pastey-test-suite/tests/ui/invalid-replace.stderr
error: expected `(` after replace modifier
  --> tests/ui/invalid-replace.rs:6:28
   |
 6 |             struct [< $name:replace >]
   |                            ^^^^^^^^
...
11 | m!(Pastey);
   | ---------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)
